# Brainiac

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: linux.yml
engine/: bits.cpp  bits.h  board.cpp  board.h  brainiac.cpp  brainiac.h  braniac.h  heuristic.h  move.h  piece.h  transpositions.cpp  transpositions.h  util.cpp  util.h  zobrist.cpp  zobrist.h
engine/neural/: activations.h  brain.cpp  brain.h  costs.h  genome.cpp  genome.h  hyperparams.h  matrix.cpp  matrix.h  network.cpp  network.h  octree.cpp  octree.h  phenome.cpp  phenome.h  quadtree.cpp  quadtree.h  random.cpp  random.h  species.cpp  species.h
src/: Bitboard.cpp  Bitboard.hpp  Board.cpp  Board.hpp  Brainiac.cpp  Brainiac.hpp  Engine.cpp  Engine.hpp  Evaluation.cpp  Evaluation.hpp  Game.cpp  Game.hpp  Hasher.cpp  Hasher.hpp  History.cpp  History.hpp  Move.cpp  Move.hpp  MoveGen.cpp  MoveGen.hpp  MoveList.cpp  MoveList.hpp  MovePicker.cpp  MovePicker.hpp  Numeric.hpp  PVTable.cpp  PVTable.hpp  Perft.cpp  Perft.hpp  Piece.cpp  Piece.hpp  Position.cpp  Position.hpp  Search.cpp  Search.hpp  Sliders.cpp  Sliders.hpp  Square.cpp  Square.hpp  State.cpp  (+24 more)
tests/: CMakeLists.txt
tests/src/: Bitboard-test.cpp  Board-test.cpp  Evaluation-test.cpp  History-test.cpp  Move-test.cpp  MoveList-test.cpp  MovePicker-test.cpp  PVTable-test.cpp  Perft-test.cpp  Piece-test.cpp  Position-test.cpp  Search-test.cpp  Square-test.cpp  Transpositions-test.cpp  Utils-test.cpp  ctest.hpp
workflows/: linux.yml
